--- a/wiz_demo/client.html
+++ b/wiz_demo/client.html
@@ -411,7 +411,7 @@
                                     <div class="field-content">
                                         <div class="prototype">
                                             <iframe id="iframe-robocheck"
-                                                src="https://docs.google.com/spreadsheets/d/1z9EzrgDIR11HGc7UFnRxZcqhC2xruSyXytict2eysYc/htmlembed/sheet?gid=683514345&range=A1:B10"
+                                                src="https://docs.google.com/spreadsheets/d/1z9EzrgDIR11HGc7UFnRxZcqhC2xruSyXytict2eysYc/htmlembed/sheet?gid=683514345&range=A1:B8"
                                                 width="500px" height="350px" frameborder="0"></iframe>
                                             <button class="button is-small is-info refresh"
                                                 id="reload-robocheck">refresh</button>
@@ -433,7 +433,7 @@
 
     <footer class="footer">
         <div class="content has-text-centered">
-            <p>This is a research prototype, only used for the workshop for co-designing NLP solutions to assist human
+            <p>This is a research prototype, only used for the workshop of co-designing NLP solutions to assist human
                 fact-checkers. Designed by Houjiang Liu. <br> This webpage is under a <a
                     href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA license</a>
                 </p>
