--- a/wiz_demo/widget.html
+++ b/wiz_demo/widget.html
@@ -19,13 +19,13 @@
         <div class="container">
             <div class="navbar-menu">
                 <div class="navbar-start">
-                    <a class="navbar-brand brand" href="client.html">
+                    <a class="navbar-brand brand" href="PartA.html">
                         <p>Co-design NLP for automated fact-checking</p>
                     </a>
                 </div>
                 <div class="navbar-end">
-                    <a class="navbar-item" href="client.html"><br />PART A</a>
-                    <a class="navbar-item" href=""><br />PART B</a>
+                    <a class="navbar-item" href="PartA.html"><br />PART A</a>
+                    <a class="navbar-item" href="PartB.html"><br />PART B</a>
                     <a class="navbar-item navbar-item-active" href="widget.html"><br />Toolkit</a>
                 </div>
             </div>
