--- a/wiz_demo/widget.html
+++ b/wiz_demo/widget.html
@@ -51,22 +51,25 @@
                     <div class="selectPrompts">
                         <div class="select is-normal">
                             <select>
+                                <option>Detect checkable claims</option>
+                                <option>Detect check-worthy claims on social media</option>
+                                <option>Generate briefs to assist fact-checking</option>
+                                <option>Robocheck simple claims</option>
+                                <option>Decontextualize claims</option>
+                                <option>Investigate claim's ambiguity/option>
+                                <option>Fast-check quantitative claims</option>
+                                <option>Evaluate fact-check report</option>
                                 <option>Know the harm of believing a false claim</option>
-                                <option>Identify high engaging content or many similar claims popping up with smaller
-                                    share
-                                    numbers</option>
+                                <option>Identify high engaging content or many similar claims popping up with smaller share numbers</option>
                                 <option>Have better tools to manage audience requests from WhatsApp</option>
                                 <option>Reduce repetitive claims to check</option>
                                 <option>Reduce repetitive tasks in fact-checking</option>
                                 <option>Access high-quality information</option>
                                 <option>Find sources of claims in a closed platform such as Whatsapp</option>
                                 <option>Streamline a codified training system for new fact-checkers</option>
-                                <option>Want ClaimReview to support different languages across different online
-                                    platforms
-                                </option>
+                                <option>Want ClaimReview to support different languages across different online platforms</option>
                                 <option>Understand how ClaimReview contributes to search results ranking</option>
-                                <option>Understand what criteria that Google is using to pick which fact-checking
-                                    organizations are treated as authoritative sources</option>
+                                <option>Understand what criteria that Google is using to pick which fact-checking organizations are treated as authoritative sources</option>
                             </select>
                         </div>
                         <p class="content is-small"><a>write new prompts</a></p>
