--- a/wiz_demo/PartA.html
+++ b/wiz_demo/PartA.html
@@ -332,7 +332,7 @@
                                     <div class="field-content">
                                         <div class="prototype">
                                             <iframe id="iframe-generate-article-briefs"
-                                                src="https://docs.google.com/spreadsheets/d/1z9EzrgDIR11HGc7UFnRxZcqhC2xruSyXytict2eysYc/htmlembed/sheet?gid=1594202430&range=A1:A10"
+                                                src="https://docs.google.com/spreadsheets/d/1z9EzrgDIR11HGc7UFnRxZcqhC2xruSyXytict2eysYc/htmlembed/sheet?gid=1594202430&range=A1:A3"
                                                 width="400px" height="250px" frameborder="0"></iframe>
                                             <button class="button is-small is-info refresh"
                                                 id="reload-generate-article-briefs">refresh</button>
@@ -459,6 +459,6 @@
 
 </body>
 
-<script src="main.js"></script>
+<script src="PartA.js"></script>
 
 </html>
