--- a/wiz_demo/widget.html
+++ b/wiz_demo/widget.html
@@ -79,7 +79,7 @@
                         <p class="content is-small"><a>select design prompts</a></p>
                     </div>
                 </div>
-                <h3 class="title is-6">Wizard of oz prototype</h3>
+                <h3 class="title is-6">Prototype</h3>
                 <div class="columns">
                     <div class="column is-half">
                         <form class="wiz" name="">
