--- a/wiz_demo/widget.html
+++ b/wiz_demo/widget.html
@@ -31,10 +31,8 @@
             </div>
             <div class="desc">
                 <h4 class="title is-5">Text-based interactive widget</h4>
-                <p>We prototype a text-based interactive widget that helps participants who are not conversant
-                    with NLP
-                    abstractly snowball NLP tasks. Please review the challenges in human fact-checking first,
-                    and use it
+                <p>We prototype a text-based interactive widget that helps participants who are not conversant with NLP
+                    abstractly snowball NLP tasks. Please review the challenges in human fact-checking first, and use it
                     as design prompts to brainstorm new NLP solutions.</p>
             </div>
 
@@ -45,7 +43,7 @@
             <!-- co-design widget -->
             <div class="idea">
                 <div class="idea-top">
-                    <h4 class="title is-6">Challenges in human fact-checking</h4>
+                    <h4 class="title is-6">Prompts for designing new technical ideas</h4>
                     <p>We collect a list of challenges in human fact-checking as design prompts. Please select one of
                         them or write a new one for brainstorming.</p>
                     <div class="selectPrompts">
@@ -60,16 +58,19 @@
                                 <option>Fast-check quantitative claims</option>
                                 <option>Evaluate fact-check report</option>
                                 <option>Know the harm of believing a false claim</option>
-                                <option>Identify high engaging content or many similar claims popping up with smaller share numbers</option>
+                                <option>Identify high engaging content or many similar claims popping up with smaller
+                                    share numbers</option>
                                 <option>Have better tools to manage audience requests from WhatsApp</option>
                                 <option>Reduce repetitive claims to check</option>
                                 <option>Reduce repetitive tasks in fact-checking</option>
                                 <option>Access high-quality information</option>
                                 <option>Find sources of claims in a closed platform such as Whatsapp</option>
                                 <option>Streamline a codified training system for new fact-checkers</option>
-                                <option>Want ClaimReview to support different languages across different online platforms</option>
+                                <option>Want ClaimReview to support different languages across different online
+                                    platforms</option>
                                 <option>Understand how ClaimReview contributes to search results ranking</option>
-                                <option>Understand what criteria that Google is using to pick which fact-checking organizations are treated as authoritative sources</option>
+                                <option>Understand what criteria that Google is using to pick which fact-checking
+                                    organizations are treated as authoritative sources</option>
                             </select>
                         </div>
                         <p class="content is-small"><a>write new prompts</a></p>
