--- a/wiz_demo/PartA.html
+++ b/wiz_demo/PartA.html
@@ -30,11 +30,10 @@
                 </div>
             </div>
             <div class="desc">
-                <p>Inspired by existing research papers that have applied natural language processing (NLP) to achieve
-                    automated fact-checking, we present following ideas. Each idea is displayed with a
-                    text-based storyboard and a wizard of oz prototype. Please read the storyboard description to
-                    understand how NLP is adopted to assist fact-checking and explore prototypes to make sense of its
-                    implementations followed by instructions.</p>
+                <p>Inspired by existing research papers that have applied natural language processing (NLP) to assist
+                    human fact-checking, we present following ideas. Each idea is displayed with a text-based storyboard
+                    and a real-time prototype. Please read the storyboard description to understand how NLP is adopted
+                    to assist fact-checking and explore prototypes to make sense of its implementations.</p>
             </div>
         </div>
     </section>
@@ -47,11 +46,10 @@
                     <p><b>Description:</b> this idea aims to use an existing annotation category to automatedly classify
                         and detect checkable new claims. The category is developed by experts at Full Fact, based on
                         their needs of checking claims by topics and routing different types of claims to the right
-                        dataset for the downstream fact-checking tasks.</p>
-                    <p><b>Objective:</b> this idea aims to lead the discussion of how to objectively determine what
-                        constitutes a claim
-                        that is checkable based on the various contexts of fact-checking organizations and how to make
-                        this technological system useful.</p>
+                        dataset for the downstream fact-checking tasks. </p>
+                    <p><b>Objective:</b> this idea aims to lead the discussion of how to objectively determine
+                        "checkable" claims based on different claim-selection criteria across fact-checking
+                        organizations.</p>
                     <div class="image"><img src="image/detect checkable claims.svg" alt=""></div>
                 </div>
                 <h3 class="title is-6">Prototype</h3>
@@ -148,16 +146,16 @@
             <div class="idea">
                 <div class="idea-top">
                     <h4 class="title is-5">2. Detect check-worthy claims on social media</h4>
-                    <p><b>Description: </b>this idea aims to use different social media metrics to detect the virality
-                        and
-                        susceptibility of a tweet based on crowd's activities, such as people's comments and retweets.
-                        By analyzing different linguistic features from tweets' comments, including sentiment, political
-                        ideology, and stances, the system helps to detect if the claim is worthy of fact-checking based
-                        on both social media metrics and linguistic features.</p>
+                    <p><b>Description: </b> this idea aims to use different social media metrics to detect the virality
+                        and susceptibility of tweets based on crowd's activities, such as people's comments and
+                        retweets. By analyzing different linguistic features from tweets' comments, including sentiment,
+                        political ideology, and stances, the system helps to detect if the claim is worthy of
+                        fact-checking. The check-worthy result combine effects from both social media metrics and
+                        linguistic features.
+                    </p>
                     <p><b>Objective: </b>this idea aims to lead the discussion of how to define virality and
-                        susceptibility of
-                        social media posts and how to objectively quantify those social media metrics for the use of
-                        finding check-worthy claims.</p>
+                        susceptibility of social media posts, how to objectively quantify those social media metrics,
+                        and how to combine linguistic features to find check-worthy claims.</p>
                     <div class="image"><img
                             src="image/Detect check-worthy claims on social media based on virality and textual features.svg"
                             alt=""></div>
@@ -255,12 +253,11 @@
             <div class="idea">
                 <div class="idea-top">
                     <h4 class="title is-5">3. Generate news article briefs for fast-reading</h4>
-                    <p><b>Description: </b>this idea aims to use an extractive summarization method to highlight
-                        sentences
-                        considered to be part of a summary from the original articles and compress a list of summary
-                        brief for fast-reading.</p>
-                    <p><b>Objective:</b> this idea aims to lead the discussion of how to use summarization to improve
-                        fast-reading or other tasks to assist fact-checking</p>
+                    <p><b>Description: </b> this idea aims to use an extractive summarization method to highlight
+                        sentences from the article. These sentences are compressed into a list of summary brief and
+                        considered to be part of a summary.</p>
+                    <p><b>Objective:</b> this idea aims to lead the discussion of how summarization helps to assist
+                        fact-checking across different separated tasks, such as fast-reading in claim investigation.</p>
                     <div class="image"><img src="image/Generate news article briefs for fast-reading.svg" alt=""></div>
                 </div>
                 <h3 class="title is-6">Prototype</h3>
@@ -353,10 +350,9 @@
                 <div class="idea-top">
                     <h4 class="title is-5">4. Robocheck simple claims by searching evidence</h4>
                     <p><b>Description: </b>this idea aims to retrieve relevant articles according to a claim and
-                        automatedly
-                        verify the claim based on stances of these retrieval articles.</p>
-                    <p><b>Objective:</b> this idea aims to lead the discussion of what kinds of claims are appropriate for
-                        machine to check and how to effectively review the results from robocheck.</p>
+                        automatedly verify the claim based on stances of these retrieval articles.</p>
+                    <p><b>Objective: </b>this idea aims to lead the discussion of what kinds of claims are appropriate
+                        for machine to check and how fact-checkers review these robocheck results efficiently.</p>
                     <div class="image"><img src="image/Robocheck simple claims by searching evidence.svg" alt=""></div>
                 </div>
                 <h3 class="title is-6">Prototype</h3>
